Change cell order

--- a/basic_examples/Basic_Example.ipynb
+++ b/basic_examples/Basic_Example.ipynb
@@ -98,9 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Tubes\n",
@@ -133,50 +131,6 @@
     "\n",
     "fig = moly.Figure()\n",
     "fig.add_molecule(\"water_dimer\", water_dimer, style=\"wireframe\")\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Figure Properties"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Size. \n",
-    "For quick visualization or exporting for publication. You can set your preferred size as a Figure argument. \n",
-    "In order to download, just click on the camera icon on the upper right corner. The image will be saved with the desired resolution. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "#Small\n",
-    "fig = moly.Figure(figsize=(300,300))\n",
-    "fig.add_molecule(\"water\", moly.Molecule.from_file(\"water.xyz\"))\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "#Huge\n",
-    "fig = moly.Figure(figsize=(1000,1000))\n",
-    "fig.add_molecule(\"water\", moly.Molecule.from_file(\"water.xyz\"))\n",
     "fig.show()"
    ]
   },
@@ -226,11 +180,51 @@
     "fig.add_cubes(directory='cubes', colorscale=\"portland\", iso=0.1)\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Figure Properties"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Size. \n",
+    "For quick visualization or exporting for publication. You can set your preferred size as a Figure argument. \n",
+    "In order to download, just click on the camera icon on the upper right corner. The image will be saved with the desired resolution. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Small\n",
+    "fig = moly.Figure(figsize=(300,300))\n",
+    "fig.add_molecule(\"water\", moly.Molecule.from_file(\"water.xyz\"))\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Huge\n",
+    "fig = moly.Figure(figsize=(1000,1000))\n",
+    "fig.add_molecule(\"water\", moly.Molecule.from_file(\"water.xyz\"))\n",
+    "fig.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:p4env]",
+   "display_name": "Python [conda env:p4env] *",
    "language": "python",
    "name": "conda-env-p4env-py"
   },
